infra/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: sqld-gateway
  namespace: app
spec:
  gatewayClassName: eg
  addresses:
    - type: IPAddress
      value: 192.168.215.240
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
