infra/gateway/airflow-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: airflow-route
  namespace: pipeline
spec:
  parentRefs:
    - name: sqld-gateway
      namespace: app
  hostnames:
    - airflow.int.selfronny.com
  rules:
    - backendRefs:
        - name: airflow-api-server
          port: 8080
