infra/gateway/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: sqld-gateway
      namespace: app
  hostnames:
    - argocd.int.selfronny.com
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
